--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "express-handlebars": "^8.0.3",
-    "path": "^0.12.7"
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   }
 }
